k8s/backend-deployment_old.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: capstone
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: backend
        image: 688372068524.dkr.ecr.ap-south-1.amazonaws.com/capstoneproject/docker-images:backend-9158c4ff364bdfde90fa3478bcd1d273415af654
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: capstone
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
