k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: capstone
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        role: frontend
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: frontend
          image: 688372068524.dkr.ecr.ap-south-1.amazonaws.com/capstoneproject/docker-images:frontend-8958dc3
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: capstone
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: alb   # use "alb" if you want ALB; "nlb" for network LB
    service.beta.kubernetes.io/aws-load-balancer-internal: "false" # Internet-facing
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: <your-ssl-arn> # optional for HTTPS
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"          # optional for HTTPS
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80        # ALB listens on 80 (HTTP)
      targetPort: 3000
  type: LoadBalancer
