k8s/mongodb-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-headless
  labels: { app: mongodb }
spec:
  clusterIP: None
  ports:
    - port: 27017
      name: mongodb
  selector: { app: mongodb }

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  selector:
    matchLabels: { app: mongodb }
  serviceName: mongodb-headless
  replicas: 1
  template:
    metadata: { labels: { app: mongodb } }
    spec:
      containers:
        - name: mongod
          image: mongo:6.0
          ports: [{ containerPort: 27017 }]
          volumeMounts:
            - name: data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: gp2
        resources:
          requests:
            storage: 20Gi
